--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev":"nodemon",
+    "start:dev": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/Zmennn/nodejs-homework-01#readme",
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "commander": "^8.3.0"
   }
 }
